# Challenges

./: .gitignore  README.md  generate_readme.py  requirements.txt
CodeForces/: CMakeLists.txt  info.json
CodeForces/Complete/1000/: 118A.cpp  122A.cpp  131A.cpp  1A.cpp  230A.cpp  339B.cpp  479A.cpp  58A.cpp  69A.cpp
CodeForces/Complete/1100/: 158B.cpp  270A.cpp  82A.cpp
CodeForces/Complete/1300/: 25A.cpp
CodeForces/Complete/800/: 1030A.cpp  110A.cpp  112A.cpp  116A.cpp  1328A.cpp  1335A.cpp  1352A.cpp  136A.cpp  141A.cpp  1443A.cpp  1445A.cpp  144A.cpp  148A.cpp  158A.cpp  200B.cpp  228A.cpp  231A.cpp  236A.cpp  263A.cpp  266A.cpp  266B.cpp  268A.cpp  271A.cpp  281A.cpp  282A.cpp  339A.cpp  344A.cpp  41A.cpp  443A.cpp  467A.cpp  472A.cpp  486A.cpp  496A.cpp  4A.cpp  50A.cpp  510A.cpp  520A.cpp  546A.cpp  59A.cpp  617A.cpp  (+8 more)
CodeForces/Complete/900/: 133A.cpp  160A.cpp  208A.cpp  318A.cpp  337A.cpp  405A.cpp  580A.cpp  96A.cpp
CodeForces/Incomplete/1100/: 1511C.cpp  158B.cpp
CodeForces/Incomplete/1200/: 492B.cpp
CodeForces/Incomplete/1300/: 4C.cpp
CodeForces/Incomplete/800/: 1437A.cpp  996A.cpp
Kattis/: info.json
Kattis/Complete/: 2048.py  4thought.py  aaah.py  aboveaverage.py  abs.py  acm.py  addtwonumbers.py  akcija.py  alphabetspam.py  anothercandies.py  anwealphabet.py  apaxiaaans.py  apaxianparent.py  areal.py  armystrengthhard.py  autori.py  avion.py  backspace.py  batterup.py  beehives.py  bela.py  bijele.py  bing.py  blackfriday.py  boatparts.py  bookinaroom.py  busnumbers.py  calories.py  carrots.py  cetvrta.py  chanukah.py  cold.py  compromise.py  conundrum.py  cudoviste.py  datum.py  delimitersoup.py  detaileddifferences.py  dicecup.py  dicegame.py  (+130 more)
Kattis/Incomplete/: 8queens.py  beavergnaw.py  cd.py  classy.py  coast.py  different.py  generalchineseremainder.py  jabuke.py  joinstrings.py  kattissquest.py  leftbeehind.py  listgame.py  oddgnome.py  okvir.py  plantingtrees.py  recount.py  semafori.py  sequences.py  shopaholic.py  teque.py  tetration.py  timebomb.py  toilet.py  tsp.py  virtualfriends.py  volim.py
Kattis/Partial/: camplunches.py  lyklagangriti.py
ProjectEuler/: info.json
ProjectEuler/Complete/: 1.py  10.py  102.py  104.py  109.py  11.py  112.py  114.py  115.py  116.py  117.py  118.py  119.py  12.py  120.py  121.py  122.py  123.py  124.py  125.py  126.py  130.py  134.py  135.py  136.py  145.py  15.py  159.py  166.py  169.py  17.py  173.py  174.py  179.py  18.py  183.py  187.py  188.py  19.py  190.py  (+88 more)
ProjectEuler/Incomplete/: 100.py  101.py  104.py  107.py  108.py  109.py  111.py  127.py  128.py  135.py  136.py  141.py  142.py  148.py  151.py  155.py  158.py  159.py  160.py  161.py  162.py  164.py  164b.py  164c.py  185.py  207.py  209.py  214.py  243.py  268.py  315.py  341.py  347.py  352.py  371.py  381.py  407.py  479.py  485.py  491.py  (+22 more)
ProjectEuler/Resources/: RecoveryKey.txt  Words42.txt  guesses185.txt
ProjectEuler/Utilities/: Factoring.py  PrimeTesting.py  README.md  (+1 more)
Rosalind/: DNA_to_RNA.py  MonoisotopicMassTable.py  info.json
SPOJ/: info.json
(+203 files in other folders)
