cmake_minimum_required(VERSION 3.16)
project(CodeForces)

set(CMAKE_CXX_STANDARD 11)

add_executable(82A Complete/1100/82A.cpp)
add_executable(71A Complete/800/71A.cpp)
add_executable(158A Complete/800/158A.cpp)
add_executable(4A Complete/800/4A.cpp)
add_executable(231A Complete/800/231A.cpp)
add_executable(50A Complete/800/50A.cpp)
add_executable(282A Complete/800/282A.cpp)
add_executable(112A Complete/800/112A.cpp)
add_executable(263A Complete/800/263A.cpp)
add_executable(339A Complete/800/339A.cpp)
add_executable(281A Complete/800/281A.cpp)
add_executable(266A Complete/800/266A.cpp)
add_executable(236A Complete/800/236A.cpp)
add_executable(546A Complete/800/546A.cpp)
add_executable(116A Complete/800/116A.cpp)
add_executable(791A Complete/800/791A.cpp)
add_executable(977A Complete/800/977A.cpp)
add_executable(617A Complete/800/617A.cpp)
add_executable(266B Complete/800/266B.cpp)
add_executable(110A Complete/800/110A.cpp)
add_executable(41A Complete/800/41A.cpp)
add_executable(96A Complete/900/96A.cpp)
add_executable(160A Complete/900/160A.cpp)
add_executable(133A Complete/900/133A.cpp)
add_executable(580A Complete/900/580A.cpp)
add_executable(318A Complete/900/318A.cpp)
add_executable(1A Complete/1000/1A.cpp)
add_executable(118A Complete/1000/118A.cpp)
add_executable(69A Complete/1000/69A.cpp)
add_executable(122A Complete/1000/122A.cpp)
add_executable(58A Complete/1000/58A.cpp)
add_executable(158B Incomplete/1100/158B.cpp)
add_executable(59A Complete/800/59A.cpp)
add_executable(467A Complete/800/467A.cpp)
add_executable(734A Complete/800/734A.cpp)
add_executable(271A Complete/800/271A.cpp)
add_executable(136A Complete/800/136A.cpp)
add_executable(677A Complete/800/677A.cpp)
add_executable(705A Complete/800/705A.cpp)
add_executable(1030A Complete/800/1030A.cpp)
add_executable(344A Complete/800/344A.cpp)
add_executable(486A Complete/800/486A.cpp)
add_executable(61A Complete/800/61A.cpp)
add_executable(148A Complete/800/148A.cpp)
add_executable(200B Complete/800/200B.cpp)
add_executable(496A Complete/800/496A.cpp)
add_executable(144A Complete/800/144A.cpp)
add_executable(1445A Complete/800/1445A.cpp)
add_executable(1443A Complete/800/1443A.cpp)
add_executable(1437A Incomplete/800/1437A.cpp)
add_executable(1328A Complete/800/1328A.cpp)
add_executable(785A Complete/800/785A.cpp)
add_executable(268A Complete/800/268A.cpp)
add_executable(520A Complete/800/520A.cpp)
add_executable(1335A Complete/800/1335A.cpp)
add_executable(141A Complete/800/141A.cpp)
add_executable(996A Incomplete/800/996A.cpp)
add_executable(510A Complete/800/510A.cpp)
add_executable(472A Complete/800/472A.cpp)
add_executable(1352A Complete/800/1352A.cpp)
add_executable(25A Complete/1300/25A.cpp)
add_executable(443A Complete/800/443A.cpp)
add_executable(429B Incomplete/1200/492B.cpp)
add_executable(339B Complete/1000/339B.cpp)
add_executable(4C Incomplete/1300/4C.cpp)
add_executable(1511C Incomplete/1100/1511C.cpp)